--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -110,52 +110,52 @@
     <!-- Navigation ################################################################-->
     <section class="" style="margin: 9.375rem 0;">
         <div class="container px-4 px-lg-5">
-            <div class="UXCaseTeam row gx-0 mx-5 mx-lg-0">
+            <div class="UXCaseTeam row gx-0">
                 <div class="text-center col-md-4">
                     <h5>Role</h5>
-                    <b1>Designer <br>
-                    Researcher</b1>
+                    <p>Designer <br>
+                    Researcher</p>
                 </div>
 
                 <div class="text-center col-md-4">
                     <h5>Team</h5>
-                    <b1>
+                    <p>
                         Maria Telles<br>
                         Laura Isaac
-                    </b1>
+                    </p>
                 </div>
 
                 <div class="text-center col-md-4">
                     <h5>Duration</h5>
-                    <b1>
+                    <p>
                         4 weeks <br>
                         (Mar 28 - Apr 22 )
-                    </b1>
+                    </p>
                 </div>
             </div>
 
-            <div class="UXCaseNav row gx-0 mb-lg-8">
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#AFA_Overview">Overview</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#AFA_Research">Research</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#AFA_Ideation">Ideation</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#AFA_Evaluation">Evaluation</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#AFA_Prototyping">Prototyping</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#AFA_Final">Final Product</a>
+            <div class="UXCaseNav row gx-0 mb-5">
+                <a class="hvr-sweep" href="#AFA_Overview">Overview</a>
+                <a class="hvr-sweep" href="#AFA_Research">Research</a>
+                <a class="hvr-sweep" href="#AFA_Ideation">Ideation</a>
+                <a class="hvr-sweep" href="#AFA_Evaluation">Evaluation</a>
+                <a class="hvr-sweep" href="#AFA_Prototyping">Prototyping</a>
+                <a class="hvr-sweep" href="#AFA_Final">Final Product</a>
             </div>
         </div>
 
     <!-- Overview ################################################################-->
         <div class="container px-4 px-lg-5" id="AFA_Overview">
             <div class="">
-                <p class="leadingLine text-nav text-muted mb-5">
+                <h6 class="leadingLine text-nav text-muted mb-5">
                     Overview
-                </p>
-                <p class="playFair mb-md-5">
-                    We redesigned the nonprofit organization’s website called Arts for All to create a better experience for the users.
-                </p>
+                </h6>
+                <h6 class="playFair mb-5">
+                    We redesigned the nonprofit organization&apos;s website called Arts for All to create a better experience for the users.
+                </h6>
                 <div class="d-flex">
                     <div class="col-md-6">
-                        <b1 class="">
+                        <p class="">
                             <b>The Problem:</b>
                             <br>
                             <br>
@@ -167,7 +167,7 @@
                             <br>
                             <br>
                             We believe we will help them maintaining an organized and updated list of positions available and detailing all the necessary information. Doing this will allow our product to benefit the user by providing a smooth process and help the community by enabling more people to offer a helping hand to this nonprofit.
-                        </b1>
+                        </p>
                     </div>
                     <div class="col-md-1"></div>
                     <img src="../assets/img/UX_AFA/undraw_doll_play_evbw.svg" alt="" class="ps-5 col-md-5 align-self-end imgSVG">
@@ -180,20 +180,20 @@
     <section id="AFA_Research">
         <div class="container px-4 px-lg-5 d-flex">
             <div class="">
-                <p class="leadingLine text-nav text-muted mb-5">
+                <h6 class="leadingLine text-nav text-muted mb-5">
                     Research
-                </p>
-                <p class="playFair mb-md-5">
+                </h6>
+                <h6 class="playFair mb-5">
                     In the research process, each team member conducted at least one interview with potential user to get the first insights.
-                </p>
+                </h6>
                 <div class="row d-flex">
                     <div class="col-11 col-md-9 mx-md-auto mx-sm-0">
-                        <b1>
+                        <p>
                             Through the <b>5 interviews</b>, we could understand their behaviors, opinions, past experiences, and suggestions for potential organizations. We prepared questions strategically divided into warm up questions, past experiences, and suggestions for organizations.
                             <br>
                             <br>
                             We got a lot of important insights from our interviews that helped us to understand how the users behave. 
-                        </b1>
+                        </p>
                     </div>
                     <div class="row d-flex justify-content-center mt-4">
                         <img src="../assets/img/UX_AFA/UX_AFA_quote01.svg" alt="" class="left">
@@ -210,32 +210,32 @@
     <section style="padding: 9.375rem 0 0 0;">
         <div class="container px-4 px-lg-5" id="AFA_Ideation">
             <div class="row d-flex">
-                <p class="leadingLine text-nav text-muted mb-5">
+                <h6 class="leadingLine text-nav text-muted mb-5">
                     Ideation
-                </p>
+                </h6>
                 <div class="">
-                    <div class="my-5 col-md-9 mx-auto">
-                        <b1>
+                    <div class="mt-3 mb-5 col-md-9 mx-auto">
+                        <p>
                             With all the insights that we got on the interviews we created the <b>Affinity Diagram</b> to organize related facts and insights. We could see some patterns on this research, so we divided the diagram into <b>reasons, pain points, research, and experiences.</b>
-                        </b1>
+                        </p>
                     </div>
                     <img src="../assets/img/UX_AFA/UX_AFA_reasons.png" alt="" class="img-fluid">
                 </div>
 
                 <div class="">
                     <div class="my-5 col-md-9 mx-auto">
-                        <b1>
+                        <p>
                             After building the <b>empathy map</b> where we could visualize volunteer attitudes, behaviors, and frustrations that helped us to align on a deeper understanding. So we could see that they research about the organization before they volunteer, likes to have detailed information and schedule about the position, and understand how they can help the community.
-                        </b1>
+                        </p>
                     </div>
                     <img src="../assets/img/UX_AFA/UX_AFA_empathy.png" alt="" class="img-fluid">
                 </div>
 
-                <div class="">
+                <div class="mb-5 pb-3">
                     <div class="my-5 col-md-9 mx-auto">
-                        <b1>
+                        <p>
                             Next step, we came up with our <b>proto-persona</b>, Diana Andrea. She is 24 years old, lives in Manhattan NY, and works as substitute teacher, and a freelance artist. She is always looking for opportunities to volunteer, and her goal is to help the community while improving her communication and networking skills.
-                        </b1>
+                        </p>
                     </div>
                     <img src="../assets/img/UX_AFA/UX_AFA_protopersona.png" alt="" class="img-fluid">
                 </div>
@@ -247,34 +247,34 @@
     <section id="AFA_Evaluation">
         <div class="container px-4 px-lg-5">
             <div class="">
-                <p class="leadingLine text-nav text-muted mb-5">
+                <h6 class="leadingLine text-nav text-muted mb-5">
                     Evaluation
-                </p>
-                <p class="playFair mb-md-5">
+                </h6>
+                <h6 class="playFair mb-5">
                     To begin our design we had to pinpoint the issues from the current site that we wanted to focus on by conducting a heuristic evaluation.
-                </p>
+                </h6>
                 <div class="d-flex pt-3 pb-5">
-                    <div class="row col-md-7 pe-md-4 mx-auto">
-                        <b1>
-                            We pin point few of the problems as priorities.
+                    <div class="row col-12 col-md-7 pe-md-5 mx-auto">
+                        <p class="ps-0">
+                            We pin-point few of the problems as priorities.
                             <br>
                             <br>
                             For example, there were too many categories in the navigation bar, which made it confusing for users to find anything in specific, and a little overwhelming if they just wanted to browse around.
                             <br>
                             <br>
                             Secondly, we had a lot of contents, which we decided to condense with the same goal of making it less overwhelming for the user.
-                        </b1>
+                        </p>
                         <img src="../assets/img/UX_AFA/undraw_children_re_c37f.svg" alt="" style="opacity: 0.15; filter: saturate(0%);" class="mt-5 align-self-end">
                     </div>
                     <div class="col-md-5 AFA_EvalImage">
                         <img src="../assets/img/UX_AFA/UX_AFA_og.png" alt="" class="img-fluid">
                     </div>
                 </div>
-                <p class="playFair mb-md-5 pt-5">
+                <h6 class="playFair mb-5 pt-5">
                     Afterwards, we conducted a competitor analysis.
-                </p>
+                </h6>
                 <div class="my-5 col-md-7 mx-auto">
-                    <b1>
+                    <p>
                         For this step, we decided to each pick one competitor to research and then sat down together to go over all of our results and see what we could learn from each one.
                         <br>
                         <br>
@@ -282,9 +282,9 @@
                         <br>
                         <ol class="text-decoration-none">
                             <li>Arts for learning</li>
-                            <li>Association of Children’s Museum</li>
+                            <li>Association of Children&apos;s Museum</li>
                         </ol>
-                    </b1>
+                    </p>
                 </div>
                 <div class="col-md-10 mx-auto">
                     <img src="../assets/img/UX_AFA/UX_AFA_swot.png" alt="" class="img-fluid">
@@ -296,25 +296,43 @@
     <!-- Prototyping ################################################################-->
     <section class="" id="AFA_Prototyping" style="padding: 9.375rem 0;">
         <div class="container px-4 px-lg-5">
-            <p class="leadingLine text-nav text-muted mb-5">
-                Prototyping workflow
-            </p>
-            <p class="playFair mb-md-5">
-                Ultilizing the data we gathered from user tests, we were able to fine tune the app to become more user friendly and appealing.
-            </p>
-            <div class="d-flex">
-                <div class="col-md-7 align-self-center">
-                    <b1 class="">
-                        We completed recorded user tests with <b>teachers</b>, hoping to <b>bridge their real life experience to improve the app.</b>
-                        </br>
-                        </br>
-                        The teachers were asked to complete tasks such as creating a new teacher account, creating a new science lesson with videos and games, and sending parents a grade notification for their students.
-                        </br>
-                        </br>
-                        With addition suggestions, we added in certain features to help including a back button on every page, signing up for a new account bringing you straight to the home page, and turning student grades and participation records from multiple pages into one expanded list. 
-                    </b1>
-                </div>
-                <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5">
+            <h6 class="leadingLine text-nav text-muted mb-5">
+                Prototyping
+            </h6>
+            <h6 class="playFair mb-5">
+                Prototyping workflow:
+            </h6>
+            <div class="row justify-content-center mt-5 mx-auto d-none d-sm-flex">
+                <img src="../assets/img/UX_AFA/UX_AFA_workflow01.svg" alt="" class="col-3">
+                <img src="../assets/img/UX_AFA/UX_AFA_workflow02.svg" alt="" class="col-3">
+                <img src="../assets/img/UX_AFA/UX_AFA_workflow03.svg" alt="" class="col-3">
+                <img src="../assets/img/UX_AFA/UX_AFA_workflow04.svg" alt="" class="col-3">
+                <img src="../assets/img/UX_AFA/UX_AFA_workflow05.svg" alt="" class="col-3">
+                <img src="../assets/img/UX_AFA/UX_AFA_workflow06.svg" alt="" class="col-3">
+                <img src="../assets/img/UX_AFA/UX_AFA_workflow07.svg" alt="" class="col-3">
+            </div>
+            <div class="row mt-5 mx-auto d-none d-md-block">
+                <img src="../assets/img/UX_AFA/UX_AFA_workflowHuge.svg" alt="" class="px-3">
+            </div>
+            <div class="row mt-5 mx-auto d-none d-sm-block d-md-none">
+                <img src="../assets/img/UX_AFA/UX_AFA_workflowMid.svg" alt="" class="px-3">
+            </div>
+            <div class="justify-content-center mt-5 col-10 mx-auto d-block d-sm-none">
+                <h6 class="text-decoration-underline">1. Mind Map:</h6>
+                <p class="ps-4 pb-3">Re-mapping the content</p>
+                <h6 class="text-decoration-underline">2. User Flow:</h6>
+                <p class="ps-4 pb-3">User flow is based on our Proto-persona</p>
+                <h6 class="text-decoration-underline">3. Lo-fi Wireframe:</h6>
+                <p class="ps-4 pb-3">Mapping the major components</p>
+                <h6 class="text-decoration-underline">4. U.I. Style Guide:</h6>
+                <p class="ps-4 pb-3">Formulating the overall styling for the website</p>
+                <h6 class="text-decoration-underline">5. Hi-fi Wireframe:</h6>
+                <p class="ps-4 pb-3">Adding contents and applying UI Style Guide</p>
+                <h6 class="text-decoration-underline">6. User Testing:</h6>
+                <p class="ps-4 mb-0">3x tests for the Desktop version</p>
+                <p class="ps-4 pb-3">4x tests for the Mobile version</p>
+                <h6 class="text-decoration-underline">7. Iterations:</h6>
+                <p class="ps-4">Revising the website for better flow with user suggested changes</p>
             </div>
         </div>
     </section>
@@ -323,16 +341,16 @@
     <section id="AFA_Final">
         <div class="container px-4 px-lg-5">
             <div class="">
-                <p class="leadingLine text-nav text-muted mb-5">
+                <h6 class="leadingLine text-nav text-muted mb-5">
                     Final Product
-                </p>
+                </h6>
                 <div class="">
                     <div class="mb-5">
-                        <p class="playFair mb-md-5">
+                        <h6 class="playFair mb-5">
                             We discovered that choosing tablets as our main platform were challenging due to the spacing constraint.
-                        </p>
+                        </h6>
                         <div class="col-sm-0 col-md-8 pb-5">
-                            <b1>
+                            <p>
                                 With more iterations, this app would be constantly evolving to keep up with teacher needs.
                                 </br>
                                 </br>
@@ -340,21 +358,21 @@
                                 </br>
                                 </br>
                                 <b>In the future, we would hope to be able to build out the sister apps of having a student version and school version of ULearn.</b>
-                            </b1>
+                            </p>
                         </div>
                     </div>
                 </div>
-                <p class="leadingLine text-nav text-muted my-5">
+                <h6 class="leadingLine text-nav text-muted my-5">
                     Final Prototype
-                </p>
+                </h6>
                 <div class="row col-auto">
-                    <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnUEYbO1wOan5CCSdQBM0TY%2FLD_Virtual-Teaching-App%3Fnode-id%3D266%253A12823%26scaling%3Dscale-down%26page-id%3D266%253A10984%26starting-point-node-id%3D266%253A12823" allowfullscreen></iframe>
+                    
                 </div>
             </div>
         </div>
 
-        <div class="d-flex mb-sm-4 UXCaseSwap">
-            <div class="d-flex">
+        <div class="mb-sm-4 UXCaseSwap">
+            <div class="pt-5 pt-sm-0">
                 <p>Previous:</p>
                 <a class="hvr-sweep" href="./UX_TD.html">TreasuryDirect.gov</a>
             </div>
