--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -113,53 +113,53 @@
     <!-- Navigation ################################################################-->
     <section class="" style="margin: 9.375rem 0;">
         <div class="container px-4 px-lg-5">
-            <div class="UXCaseTeam row gx-0 mx-5 mx-lg-0">
+            <div class="UXCaseTeam row gx-0">
                 <div class="text-center col-md-4">
                     <h5>Role</h5>
-                    <b1>Designer <br>
-                    Researcher</b1>
+                    <p>Designer <br>
+                    Researcher</p>
                 </div>
 
                 <div class="text-center col-md-4">
                     <h5>Team</h5>
-                    <b1>
+                    <p>
                         Sherlene Woodall<br>
                         Emmanuel Kastrenakes
-                    </b1>
+                    </p>
                 </div>
 
                 <div class="text-center col-md-4">
                     <h5>Duration</h5>
-                    <b1>
+                    <p>
                         3 weeks <br>
                         (Feb 27 - Mar 18)
-                    </b1>
+                    </p>
                 </div>
             </div>
 
-            <div class="UXCaseNav row gx-0 mb-lg-8">
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Overview">Overview</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Ideation">Ideation</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Analysis">Analysis</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Prototyping">Prototyping</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Final">Final Product</a>
+            <div class="UXCaseNav row gx-0 mb-5">
+                <a class="hvr-sweep" href="#TD_Overview">Overview</a>
+                <a class="hvr-sweep" href="#TD_Ideation">Ideation</a>
+                <a class="hvr-sweep" href="#TD_Analysis">Analysis</a>
+                <a class="hvr-sweep" href="#TD_Prototyping">Prototyping</a>
+                <a class="hvr-sweep" href="#TD_Final">Final Product</a>
             </div>
         </div>
 
     <!-- Overview ################################################################-->
         <div class="container px-4 px-lg-5" id="TD_Overview">
             <div class="">
-                <p class="leadingLine text-nav text-muted mb-5">
+                <h6 class="leadingLine text-nav text-muted mb-5">
                     Overview
-                </p>
-                <p class="playFair mb-md-5">
+                </h6>
+                <h6 class="playFair mb-5">
                     Coming soon
-                </p>
+                </h6>
                 <div class="d-flex">
                     <div class="col-md-7">
-                        <b1 class="">
+                        <p class="">
                             Coming soon
-                        </b1>
+                        </p>
                     </div>
                     <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG">
                 </div>
@@ -171,17 +171,17 @@
     <section id="TD_Ideation">
         <div class="container px-4 px-lg-5 d-flex">
             <div class="">
-                <p class="leadingLine text-nav text-muted mb-5">
+                <h6 class="leadingLine text-nav text-muted mb-5">
                     Ideation
-                </p>
-                <p class="playFair mb-md-5">
+                </h6>
+                <h6 class="playFair mb-5">
                     Coming soon
-                </p>
+                </h6>
                 <div class="d-flex">
                     <img src="../assets/img/UX_VTP/undraw_newspaper_re_syf5.svg" alt="" class="col-md-5 align-self-end imgSVG">
                     <div class="col-md-1"></div>
                     <div class="col-md-6 align-self-center">
-                        <b1 class="">
+                        <p class="">
                             Coming soon                          
                         </br>
                     </div>
@@ -194,17 +194,17 @@
     <section style="padding: 9.375rem 0;">
         <div class="container px-4 px-lg-5" id="TD_Analysis">
             <div class="">
-                <p class="leadingLine text-nav text-muted mb-5">
+                <h6 class="leadingLine text-nav text-muted mb-5">
                     Analysis
-                </p>
-                <p class="playFair mb-md-5 mb-5">
+                </h6>
+                <h6 class="playFair mb-5 mb-5">
                     Coming soon
-                </p>
+                </h6>
                 <div class="">
                     <div class="mb-5">
-                        <b1 class="">
+                        <p class="">
                             I'm serious, I will get to it.
-                        </b1>
+                        </p>
                     </div>
 
                     <img src="../assets/img/UX_VTP/UX_TD_ValueProp.png" alt="" class="img-fluid">
@@ -217,14 +217,14 @@
     <section id="TD_Prototyping">
         <div class="container px-4 px-lg-5">
             <div class="">
-                <p class="leadingLine text-nav text-muted mb-5">
+                <h6 class="leadingLine text-nav text-muted mb-5">
                     Prototyping
-                </p>
+                </h6>
                 <div class="">
                     <div class="mb-5">
-                        <b1>
+                        <p>
                             Patience is key.
-                        </b1>
+                        </p>
                     </div>
                     <div class="row justify-content-center">
                         <img src="../assets/img/UX_VTP/UX_TD_pototype01.png" alt="" class="img-fluid col-md-3">
@@ -239,17 +239,17 @@
     <!-- Final ################################################################-->
     <div class="container px-4 px-lg-5" id="TD_Final">
         <div class="">
-            <p class="leadingLine text-nav text-muted mb-5">
+            <h6 class="leadingLine text-nav text-muted mb-5">
                 Final Product
-            </p>
-            <p class="playFair mb-md-5">
+            </h6>
+            <h6 class="playFair mb-5">
                 Look! I get it.
-            </p>
+            </h6>
             <div class="d-flex">
                 <div class="col-md-7 align-self-center">
-                    <b1 class="">
+                    <p class="">
                         Eventually???
-                    </b1>
+                    </p>
                 </div>
                 <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5">
             </div>
@@ -289,11 +289,11 @@
     </div>
 
         <div class="mb-sm-4 UXCaseSwap">
-            <div class="">
+            <div class="pt-5 pt-sm-0">
                 <p>Previous:</p>
                 <a class="hvr-sweep" href="./UX_VTP.html">Virtual Teaching Platform</a>
             </div>
-            <div class="">
+            <div class="pt-4 pt-sm-0">
                 <p>Next:</p>
                 <a class="hvr-sweep" href="./UX_AFA.html">ArtsForAll.com</a>
             </div>
