--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -113,67 +113,66 @@
     <!-- Navigation ################################################################-->
     <section class="" style="margin: 9.375rem 0;">
         <div class="container px-4 px-lg-5">
-            <div class="UXCaseTeam row gx-0 mx-5 mx-lg-0">
+            <div class="UXCaseTeam row gx-0">
                 <div class="text-center col-md-4">
                     <h5>Role</h5>
-                    <b1>Designer <br>
-                    Researcher</b1>
+                    <p>Designer <br>
+                    Researcher</p>
                 </div>
 
                 <div class="text-center col-md-4">
                     <h5>Team</h5>
-                    <b1>
+                    <p>
                         Jacqueline VanWert<br>
                         Sherlene Woodall<br>
                         Frederick Macon
-                    </b1>
+                    </p>
                 </div>
 
                 <div class="text-center col-md-4">
                     <h5>Duration</h5>
-                    <b1>
+                    <p>
                         2 weeks <br>
                         (Jan 10 -  Jan 26)
-                    </b1>
+                    </p>
                 </div>
             </div>
 
-            <div class="UXCaseNav row gx-0 mb-lg-8">
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Research">Research</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Definition">Definition</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Ideation">Ideation</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Prototyping">Prototyping</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Testing">Testing</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Conclusion">Conclusion</a>
+            <div class="UXCaseNav row gx-0 mb-5">
+                <a class="hvr-sweep" href="#VTP_Research">Research</a>
+                <a class="hvr-sweep" href="#VTP_Definition">Definition</a>
+                <a class="hvr-sweep" href="#VTP_Ideation">Ideation</a>
+                <a class="hvr-sweep" href="#VTP_Prototyping">Prototyping</a>
+                <a class="hvr-sweep" href="#VTP_Testing">Testing</a>
+                <a class="hvr-sweep" href="#VTP_Conclusion">Conclusion</a>
             </div>
         </div>
 
     <!-- Research ################################################################-->
         <div class="container px-4 px-lg-5" id="VTP_Research">
             <div class="">
-                <p class="leadingLine text-nav text-muted mb-5">
+                <h6 class="leadingLine text-nav text-muted mb-5">
                     Research
-                </p>
-                <p class="playFair mb-md-5">
+                </h6>
+                <h6 class="playFair mb-5">
                     We started by creating a proto-persona to help us determine interview questions and our target audience.
-                </p>
+                </h6>
                 <div class="d-flex">
                     <div class="col-md-7">
-                        <b1 class="">
+                        <p class="">
                             Once we completed 6 interviews with teachers and transcribed them, we completed an affinity diagram using Figjam to help visualize key things that stand out, such as the amount of resources that teachers currently use to plan lessons.
                             </br>
                             </br>
                             Then, we created an empathy map to help further understand our users key pains and gains and further develop our teacher user-persona.
                             </br>
                             </br>
-                        </b1>
+                        </p>
 
-                        <b1 class="fw-bold">
+                        <p class="fw-bold">
                             The 8 key problems/concerns:
-                            </br>
-                            </br>   
-                        </b1>
-                        <u class="text-decoration-none">
+                            </br>  
+                        </p>
+                        <ol class="text-decoration-none">
                             <li>Enjoyments about Virtual Teaching</li>
                             <li>Troubles with Attendance</li>
                             <li>Difficult Student Engagement</li>
@@ -182,7 +181,7 @@
                             <li>Experiences about Teaching Virtually</li>
                             <li>Resources commonly used</li>
                             <li>Resources needed</li>
-                        </u>
+                        </ol>
                     </div>
                     <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG">
                 </div>
@@ -194,16 +193,16 @@
     <section id="VTP_Definition">
         <div class="container px-4 px-lg-5 d-flex">
             <div class="">
-                <p class="leadingLine text-nav text-muted mb-5">
+                <h6 class="leadingLine text-nav text-muted mb-5">
                     Definition
-                </p>
-                <p class="playFair mb-md-5">
+                </h6>
+                <h6 class="playFair mb-5">
                     Using our research we were able to identify the main problems that teachers face.
-                </p>
+                </h6>
                 <div class="d-flex">
                     <img src="../assets/img/UX_VTP/undraw_newspaper_re_syf5.svg" alt="" class="col-md-5 align-self-end imgSVG">
                     <div class="col-md-6 align-self-center ms-0 ms-md-5">
-                        <b1 class="">
+                        <p class="">
                             As a team we then decided that our solution for this was to create an all-in-one virtual teaching platform that teachers could use to prepare lessons in a quick and seamless way.
                             </br>
                             </br>
@@ -219,15 +218,15 @@
     <section style="padding: 9.375rem 0;">
         <div class="container px-4 px-lg-5" id="VTP_Ideation">
             <div class="">
-                <p class="leadingLine text-nav text-muted mb-5">
+                <h6 class="leadingLine text-nav text-muted mb-5">
                     Ideation
-                </p>
-                <p class="playFair mb-md-5 mb-5">
+                </h6>
+                <h6 class="playFair mb-5 mb-5">
                     Using the "I like, I wish, What If" method, we were able to generate ideas that could be used within the app.
-                </p>
+                </h6>
                 <div class="">
                     <div class="mb-5 col-0 col-md-9 mx-auto">
-                        <b1 class="">
+                        <p class="">
                             Using those ideas we created a feature priotization matrix, to see which of them were integal to our creation - such as having a gradebook and creating lessons available right on the app.                            
                             </br>
                             </br>
@@ -235,7 +234,7 @@
                             </br>
                             </br>
                             We then created a storyboard, with a drawn out idea of how our users would find value in our app after dealing with the frustrations of online teaching.
-                        </b1>
+                        </p>
                     </div>
 
                     <img src="../assets/img/UX_VTP/UX_VTP_ValueProp.png" alt="" class="img-fluid">
@@ -248,19 +247,19 @@
     <section id="VTP_Prototyping">
         <div class="container px-4 px-lg-5">
             <div class="">
-                <p class="leadingLine text-nav text-muted mb-5">
+                <h6 class="leadingLine text-nav text-muted mb-5">
                     Prototyping
-                </p>
+                </h6>
                 <div class="">
                     <div class="mb-5 col-0 col-md-9 mx-auto">
-                        <b1>
+                        <p>
                             We started first with a mind-map to help our team visualize what would be covered in each area of our navigation, and how we would cohesively design it. We then created a Figma file that allowed us to build out wireframes of each section and put in the interactions that users would use in order to sign into the app, create a lesson, and review the gradebook.
-                        </b1>
+                        </p>
                     </div>
                     <div class="row justify-content-center">
-                        <img src="../assets/img/UX_VTP/UX_VTP_pototype01.png" alt="" class="img-fluid col-md-3">
-                        <img src="../assets/img/UX_VTP/UX_VTP_pototype02.png" alt="" class="img-fluid col-md-3">
-                        <img src="../assets/img/UX_VTP/UX_VTP_pototype03.png" alt="" class="img-fluid col-md-3">
+                        <img src="../assets/img/UX_VTP/UX_VTP_pototype01.png" alt="" class="img-fluid col-8 col-md-3">
+                        <img src="../assets/img/UX_VTP/UX_VTP_pototype02.png" alt="" class="img-fluid col-8 col-md-3">
+                        <img src="../assets/img/UX_VTP/UX_VTP_pototype03.png" alt="" class="img-fluid col-8 col-md-3">
                     </div>
                 </div>
             </div>
@@ -270,15 +269,15 @@
     <!-- Testing ################################################################-->
     <div class="container px-4 px-lg-5" id="VTP_Testing">
         <div class="" style="margin: 9.375rem 0;">
-            <p class="leadingLine text-nav text-muted mb-5">
+            <h6 class="leadingLine text-nav text-muted mb-5">
                 Testing
-            </p>
-            <p class="playFair mb-md-5">
+            </h6>
+            <h6 class="playFair mb-5">
                 Ultilizing the data we gathered from user tests, we were able to fine tune the app to become more user friendly and appealing.
-            </p>
+            </h6>
             <div class="d-flex">
                 <div class="col-md-6 align-self-center">
-                    <b1 class="">
+                    <p class="">
                         We completed recorded user tests with <b>teachers</b>, hoping to <b>bridge their real life experience to improve the app.</b>
                         </br>
                         </br>
@@ -286,7 +285,7 @@
                         </br>
                         </br>
                         With addition suggestions, we added in certain features to help including a back button on every page, signing up for a new account bringing you straight to the home page, and turning student grades and participation records from multiple pages into one expanded list. 
-                    </b1>
+                    </p>
                 </div>
                 <div class="col-md-1"></div>
                 <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5">
@@ -298,16 +297,16 @@
     <section id="VTP_Conclusion">
         <div class="container px-4 px-lg-5">
             <div class="">
-                <p class="leadingLine text-nav text-muted mb-5">
+                <h6 class="leadingLine text-nav text-muted mb-5">
                     Conclusion
-                </p>
+                </h6>
                 <div class="">
                     <div class="mb-5">
-                        <p class="playFair mb-md-5">
+                        <h6 class="playFair mb-5">
                             We discovered that choosing tablets as our main platform were challenging due to the spacing constraint.
-                        </p>
+                        </h6>
                         <div class="col-sm-0 col-md-8 pb-5">
-                            <b1>
+                            <p>
                                 With more iterations, this app would be constantly evolving to keep up with teacher needs.
                                 </br>
                                 </br>
@@ -315,21 +314,21 @@
                                 </br>
                                 </br>
                                 <b>In the future, we would hope to be able to build out the sister apps of having a student version and school version of ULearn.</b>
-                            </b1>
+                            </p>
                         </div>
                     </div>
                 </div>
-                <p class="leadingLine text-nav text-muted my-5">
+                <h6 class="leadingLine text-nav text-muted my-5">
                     Final Prototype
-                </p>
+                </h6>
                 <div class="row col-auto">
                     <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnUEYbO1wOan5CCSdQBM0TY%2FLD_Virtual-Teaching-App%3Fnode-id%3D266%253A12823%26scaling%3Dscale-down%26page-id%3D266%253A10984%26starting-point-node-id%3D266%253A12823" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
 
-        <div class="d-flex mb-sm-4 UXCaseSwap justify-content-end">
-            <div class="d-flex">
+        <div class="mb-sm-4 UXCaseSwap">
+            <div class="pt-5 pt-sm-0">
                 <p>Next:</p>
                 <a class="hvr-sweep" href="./UX_TD.html">TreasuryDirect.gov</a>
             </div>
